# AutoNFS

./: LICENSE  README.md  pyproject.toml
autonfs/: __init__.py  feature_selection_network.py  select_gumbel_features.py  sklearn_interface.py
gfs_network/: __init__.py  feature_selection_network.py  select_gumbel_features.py  sklearn_interface.py
tests/: basic_test.py
