[tool.poetry]
name = "gfs_network"
version = "0.2.7"
description = "An end-to-end feature selection distribution with linear runtime(number of features) complexity."
authors = ["Witold Wydmański <wwydmanski@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wwydmanski/GFSNetwork"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0"
tqdm = "^4.65"

[tool.poetry.group.test.dependencies]
pytest = "^6.2"
sklearn = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"